--- a/emacs/config.org
+++ b/emacs/config.org
@@ -671,6 +671,15 @@ A couple of notes before we start going through the config for all org-related:
   ;; Disable execution of code-blocks on export by default.
   (add-to-list 'org-babel-default-header-args '(:eval . "never-export"))
 
+  ;; Make `org-goto' nice to work with.
+  ;; Source: https://emacs.stackexchange.com/a/32625
+  ;; Complete on outlines/headings.
+  ;; This uses `completing-read' behind the scenes, hence if you have something like
+  ;; `helm' or `ivy' activated, this will be used for the completion.
+  (setq org-goto-interface 'outline-path-completion)
+  ;; Don't try to complete headings in steps.
+  (setq org-outline-path-complete-in-steps nil)
+
   ;; https://emacs.stackexchange.com/a/18146
   ;; I want this bindings for references, etc. + don't add files to agenda
   ;; often enough to warrant having a binding for it.
