--- a/emacs/config.org
+++ b/emacs/config.org
@@ -459,9 +459,6 @@ Languages should then set the local variable =prettify-symbols-alist= on their o
   :hook (LaTeX-mode . company-mode)
   :init (company-auctex-init))
 
-;; helm-bibtex.el: Provides completion with `helm` for bibliographies.
-(use-package helm-bibtex)
-
 ;; company-reftex.el: Completion of citations and labels within LaTeX commands, e.g. `\cite{}'.
 (use-package company-reftex
   :after (company)
@@ -845,10 +842,6 @@ A couple of notes before we start going through the config for all org-related:
   (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
 #+end_src
 
-#+begin_src emacs-lisp :tangle no
-(use-package org-ref)
-#+end_src
-
 *** Org Export
 **** Jupyter notebook
 #+begin_src emacs-lisp
@@ -925,13 +918,34 @@ A couple of notes before we start going through the config for all org-related:
 
 *** Org-ref
 #+begin_src emacs-lisp
-;; org-ref.el: Provides citation management and handling for Org-mode.
-(use-package org-ref
-  :bind ("C-c [" . helm-bibtex)
+;; helm-bibtex.el: Provides completion with `helm` for bibliographies.
+(use-package helm-bibtex
+  :bind ("C-c ]" . helm-bibtex)
   :config
   (setq bibtex-completion-library-path '("~/Dropbox/bibliography/pdfs/"))
   (setq bibtex-completion-bibliography '("~/Dropbox/bibliography/references.bib"))
+  (setq bibtex-completion-additional-search-fields '(keywords))
+  (setq bibtex-completion-pdf-field "file")
 
+  ;; Same as old `org-ref'
+  (setq bibtex-completion-display-formats 
+        '((t . "${author:36} ${title:*} ${year:4} ${=has-pdf=:1}${=has-note=:1} ${=type=:7} ${keywords:40}")))
+
+  ;; Use `org-ref-insert-cite-keys' for citation formatting when in `org-mode'.
+  (setq bibtex-completion-format-citation-functions
+        ;; TODO: Actually, functions used here are expected to _return_ the formatted string, _not_ insert
+        ;; it directly into the buffer (which is what `org-ref-insert-cite-keys' does).
+        '((org-mode . org-ref-insert-cite-keys)
+          (latex-mode . bibtex-completion-format-citation-cite)
+          (markdown-mode . bibtex-completion-format-citation-pandoc-citeproc)
+          (python-mode . bibtex-completion-format-citation-sphinxcontrib-bibtex)
+          (rst-mode . bibtex-completion-format-citation-sphinxcontrib-bibtex)
+          (default . bibtex-completion-format-citation-default)))
+  )
+
+;; org-ref.el: Provides citation management and handling for Org-mode.
+(use-package org-ref
+  :config
   ;; Use `helm-bibtex' for completion etc.
   (require 'org-ref-helm)
   (setq org-ref-insert-link-function 'org-ref-insert-link-hydra/body
